@@ -14,6 +14,12 @@ struct {
   { "AG_IOStatus", sizeof (AG_IOStatus) },
   { "enum ag_io_status", sizeof (enum ag_io_status) },
   { "enum ag_seek_mode", sizeof (enum ag_seek_mode) },
+  { "AG_DSO *", sizeof (AG_DSO *) },
+  { "AG_DSO", sizeof (AG_DSO) },
+  { "struct ag_dso", sizeof (struct ag_dso) },
+  { "AG_DSOSym *", sizeof (AG_DSOSym *) },
+  { "AG_DSOSym", sizeof (AG_DSOSym) },
+  { "struct ag_dso_sym", sizeof (struct ag_dso_sym) },
   { "AG_EvArg", sizeof (AG_EvArg) },
   { "union evarg", sizeof (union evarg) },
   { "enum ag_evarg_type", sizeof (enum ag_evarg_type) },
