@@ -1,1 +1,1 @@
-agar-core-ada 0.11
+agar-core-ada 0.12
