@@ -1,7 +1,10 @@
+ag_dso.o
 agar-core-config.o
 agar-core-datasource.o
+agar-core-dso.o
 agar-core-error.o
 agar-core-event.o
+agar-core-limits.o
 agar-core-object.o
 agar-core-slist.o
 agar-core-tail_queue.o
