@@ -7,15 +7,20 @@ struct install_item insthier[] = {
   {INST_MKDIR, 0, 0, ctxt_dlibdir, 0, 0, 0755},
   {INST_MKDIR, 0, 0, ctxt_slibdir, 0, 0, 0755},
   {INST_MKDIR, 0, 0, ctxt_repos, 0, 0, 0755},
+  {INST_COPY, "ag_dso.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-ada-conf.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-config.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-config.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-datasource.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-datasource.ads", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-core-dso.ads", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-dso.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-error.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-error.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-event.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-event.ads", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-core-limits.ads", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-limits.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-slist.ads", 0, ctxt_repos, 0, 0, 0644},
@@ -38,6 +43,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-core-config.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-datasource.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-datasource.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-core-dso.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-dso.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-error.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-error.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-event.adb", 0, ctxt_repos, 0, 0, 0644},
@@ -52,10 +59,14 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-core-config.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-datasource.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-datasource.ali", 0, ctxt_incdir, 0, 0, 0444},
+  {INST_COPY, "agar-core-dso.ali", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-dso.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-error.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-error.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-event.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-event.ali", 0, ctxt_incdir, 0, 0, 0444},
+  {INST_COPY, "agar-core-limits.ali", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-limits.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-object.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-slist.ali", 0, ctxt_repos, 0, 0, 0644},
